[project]
name = "flash-lib"
version = "0.1.1"
description = "Everyday utility functions for Machine Learning and Data Science"
authors = [
    {name = "Althaf Muhammad", email = "zoory9900@gmail.com"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["machine learning", "data science"]
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]

[project.urls]
Repository = "https://github.com/althaf-07/flash-lib"

[tool.poetry]
packages = [
    { include = "flash", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
